--- a/DellyShopApp/DellyShopApp.Android/DellyShopApp.Android.csproj
+++ b/DellyShopApp/DellyShopApp.Android/DellyShopApp.Android.csproj
@@ -95,6 +95,15 @@
     <PackageReference Include="Xamarin.Forms">
       <Version>4.3.0.991221</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="sqlite">
+      <Version>3.13.0</Version>
+    </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.7.335</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
@@ -113,6 +122,7 @@
     <Compile Include="Renderers\PancakeViewRenderer.cs" />
     <Compile Include="Renderers\RoundedCornerOutlineProvider.cs" />
     <Compile Include="Renderers\ShapeUtils.cs" />
+    <Compile Include="Persistance\SQLLiteDb.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\VerdanaProBold.ttf" />
@@ -817,6 +827,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\logostore.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Persistance\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
