--- a/DellyShopApp/DellyShopApp.iOS/DellyShopApp.iOS.csproj
+++ b/DellyShopApp/DellyShopApp.iOS/DellyShopApp.iOS.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Rednerers\CardsViewRenderer.cs" />
     <Compile Include="Rednerers\PancakeViewRenderer.cs" />
     <Compile Include="Rednerers\ShapeUtils.cs" />
+    <Compile Include="Persistance\SQLLiteDb.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -256,6 +257,15 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
       <Version>4.3.0.991221</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="sqlite">
+      <Version>3.13.0</Version>
+    </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.7.335</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
@@ -583,5 +593,6 @@
   <ItemGroup>
     <Folder Include="Assets.xcassets\Dark Mode Backgroud Color.colorset\" />
     <Folder Include="Assets.xcassets\BgImage.imageset\" />
+    <Folder Include="Persistance\" />
   </ItemGroup>
 </Project>
