Implement Basket Sync Functionality, Implement HomePageViewMdel

--- a/DellyShopApp/DellyShopApp.iOS/DellyShopApp.iOS.csproj
+++ b/DellyShopApp/DellyShopApp.iOS/DellyShopApp.iOS.csproj
@@ -267,6 +267,9 @@
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.7.335</Version>
     </PackageReference>
+    <PackageReference Include="Acr.UserDialogs">
+      <Version>7.1.0.442</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
