--- a/DellyShopApp/DellyShopApp/DellyShopApp.csproj
+++ b/DellyShopApp/DellyShopApp/DellyShopApp.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="sqlite" Version="3.13.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
+    <PackageReference Include="Acr.UserDialogs" Version="7.1.0.442" />
   </ItemGroup>
 
   <ItemGroup>
