--- a/DellyShopApp/DellyShopApp.Android/DellyShopApp.Android.csproj
+++ b/DellyShopApp/DellyShopApp.Android/DellyShopApp.Android.csproj
@@ -107,6 +107,9 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.1.0.442</Version>
     </PackageReference>
+    <PackageReference Include="AutoMapper">
+      <Version>9.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
