--- a/DellyShopApp/DellyShopApp.iOS/DellyShopApp.iOS.csproj
+++ b/DellyShopApp/DellyShopApp.iOS/DellyShopApp.iOS.csproj
@@ -270,6 +270,9 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.1.0.442</Version>
     </PackageReference>
+    <PackageReference Include="AutoMapper">
+      <Version>9.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
