--- a/DellyShopApp/DellyShopApp/DellyShopApp.csproj
+++ b/DellyShopApp/DellyShopApp/DellyShopApp.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="sqlite" Version="3.13.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="Acr.UserDialogs" Version="7.1.0.442" />
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
