--- a/DellyShopApp/DellyShopApp.Android/DellyShopApp.Android.csproj
+++ b/DellyShopApp/DellyShopApp.Android/DellyShopApp.Android.csproj
@@ -176,6 +176,10 @@
       <Generator>
       </Generator>
     </AndroidResource>
+    <AndroidResource Include="Resources\drawable\product_type.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-hdpi\bestofYear.png" />
